# gammajet

./: .gitignore  .gitmodules  README  README.md  alice_emcal.py  alice_mc.py  alice_mc_clusters.py  alice_mc_weights.py  alice_raa.py  alice_triggers.py  all-trigger-classes.csv  df_collection.py  example-gj-correlations-2d.ipynb  example-gj-correlations.ipynb  example-template-fits.ipynb  fit_functions.py  gj_correlation.py  gj_correlation_1d.py  make-aux-file.py  make-cluster-csv.py  make_aux_file.py  make_cluster_csv.py  make_jet_csv.py  multi_parallel_run_mix.sh  parallel_run_mix.sh  params.py  photon_purity.py  plot_photon_purity.py  plotstyle.py  run_all_correlations.sh  run_mix.sh  skim-hdf5.py  skim_hdf5.py  template_fit.py  uncertainty_background_template_correction.py  uncertainty_sideband_selection.py  uncertainty_signal_template.py  unfolder.py  utils.py
cpp/: CMakeLists.txt  centrality_checks.cc  config_parser.h  gjmc_checks.cc  h5_mixed_event.cc  h5_mixed_event_parallel.cc  hdf5_mixed_event.cc  mixed_event.cc  mixed_event.h  mixed_event_withss.cc  process_gjmc.cc  process_gjmc.cpp  process_gjmc.h  process_gjmc_pp.cc  process_gjmc_pp.h  response_matrix.cc  response_matrix.h  same_event.cc  same_event.h  same_event_mc.cc  same_event_mc.h  same_event_skimmedpp.cc  same_event_skimmedpp.h  same_event_skimmedpp_mc.cc  shared_defs.h  skim_pp.cc  skim_pp.h
for-later/: dnn-ptfit.py  gammajet-correlation.py
make-csvs/: make-cluster-csv.py  make-raw-correlation-csv.py
